Examples/Engine/engine.h



//
//		GetModelMetaInfo                            (http://rdf.bg/gkdoc/CP64/GetModelMetaInfo.html)
//				int64_t				model								IN
//				int64_t				* activeClasses						IN / OUT
//				int64_t				* removedClasses					IN / OUT
//				int64_t				* activeProperties					IN / OUT
//				int64_t				* removedProperties					IN / OUT
//				int64_t				* activeInstances					IN / OUT
//				int64_t				* removedInstances					IN / OUT
//				int64_t				* inactiveInstances					IN / OUT
//
//				int64_t				returns								OUT
//
//	This function is meant for debugging purposes and return statistics during processing.
//	The return value represents the number of active models within the session (or zero if the model was not recognized).
//
int64_t		DECL STDC	GetModelMetaInfo(
									int64_t				model,
									int64_t				* activeClasses,
									int64_t				* removedClasses,
									int64_t				* activeProperties,
									int64_t				* removedProperties,
									int64_t				* activeInstances,
									int64_t				* removedInstances,
									int64_t				* inactiveInstances
								);


//
//		GetInstanceMetaInfo                         (http://rdf.bg/gkdoc/CP64/GetInstanceMetaInfo.html)
//				int64_t				owlInstance							IN
//				int64_t				* allocatedBlocks					IN / OUT
//				int64_t				* allocatedBytes					IN / OUT
//
//				int64_t				returns								OUT
//
//	This function is meant for debugging purposes and return statistics during processing.
//	The return value represents the number of active instances within the model (or zero if the instance was not recognized).
//
int64_t		DECL STDC	GetInstanceMetaInfo(
									int64_t				owlInstance,
									int64_t				* allocatedBlocks,
									int64_t				* allocatedBytes
								);


//
//		GetSmoothness                               (http://rdf.bg/gkdoc/CP64/GetSmoothness.html)
//				int64_t				owlInstance							IN
//				int64_t				* degree							IN / OUT
//
//				int64_t				returns								OUT
//
//	This function returns the smoothness of a line or surface.
//	In case the smoothness can be defined the degree will get assigned either
//		0 - continuous curve / surface (i.e. degree 9)
//		1 - the direction of the curve / surface is gradually changing (i.e. degree 1)
//		2 - the change of direction of the curve / surface is gradually changing (i.e. degree 2)
//	In return value of this function retuns the dimension of the found smoothness:
//		0 - smoothness could not be defined
//		1 - found the smoothness of a curve
//		2 - found the smoothness of a surface
//
int64_t		DECL STDC	GetSmoothness(
									int64_t				owlInstance,
									int64_t				* degree
								);


//
//		AddState                                    (http://rdf.bg/gkdoc/CP64/AddState.html)
//				int64_t				model								IN
//				int64_t				owlInstance							IN
//
//				void				returns
//
//	This call will integrate the current state information into the model.
//
//	Model should be non-zero.
//
//	If owlInstance is given the state is only applied on the owlInstance and all its children.
//	If owlInstance is zero the state is applied on all owlInstances within a model.
//
void		DECL STDC	AddState(
									int64_t				model,
									int64_t				owlInstance
								);


//
//		GetModel                                    (http://rdf.bg/gkdoc/CP64/GetModel.html)
//				int64_t				owlInstance							IN
//
//				int64_t				returns								OUT
//
//
int64_t		DECL STDC	GetModel(
									int64_t				owlInstance
								);


//
//		OrderedHandles                              (http://rdf.bg/gkdoc/CP64/OrderedHandles.html)
//				int64_t				model								IN
//				int64_t				* classCnt							IN / OUT
//				int64_t				* propertyCnt						IN / OUT
//				int64_t				* instanceCnt						IN / OUT
//				int64_t				setting								IN
//				int64_t				mask								IN
//
//				void				returns
//
//	This call can be used in two ways. The optional arguments classCnt,
//	propertyCnt and instanceCnt can be used to get the total amount of active classes,
//	properies and instances available within the model.
//
//	The setting and mask can be used to order the handles given for classes,
//	properties and instances.
//		1 - if set this will number all classes with possible values [1 .. classCnt]
//		2 - if set this will number all classes with possible values [1 .. propertyCnt]
//		4 - if set this will number all classes with possible values [1 .. instanceCnt]
//
//	Note: when enabling ordered handles be aware that classes, properties and instances
//		  can share the same handles, using the correct argument cannot be checked anymore
//		  by the library itself. This could result in crashes in case of incorrect assignments
//		  by the hosting application.
//	Note: internally there is no performance gain / loss. This is purely meant for situations
//		  where the hosting application can benefit performance wise from having an ordered list.
//	Note: use in combination with other libraries is not adviced, i.e. when combined with the
//		  IFC generation from the IFC Engine component for example
//
void		DECL STDC	OrderedHandles(
									int64_t				model,
									int64_t				* classCnt,
									int64_t				* propertyCnt,
									int64_t				* instanceCnt,
									int64_t				setting,
									int64_t				mask
								);


//
//		PeelArray                                   (http://rdf.bg/gkdoc/CP64/PeelArray.html)
//				const void			** inValue							IN
//				void				** outValue							IN / OUT
//				int64_t				elementSize							IN
//
//				void				returns
//
//	This function introduces functionality that is missing or complicated in some programming languages.
//	The attribute inValue is a reference to an array of references. The attribute outValue is a reference to the same array,
//	however a number of elements earlier or further, i.e. number of elements being attribute elementSize. Be aware that as
//	we are talking about references the offset is depending on 32 bit / 64 bit compilation.
//
void		DECL STDC	PeelArray(
									const void			** inValue,
									void				** outValue,
									int64_t				elementSize
								);


//
//		SetInternalCheck                            (http://rdf.bg/gkdoc/CP64/SetInternalCheck.html)
//				int64_t				model								IN
//				int64_t				setting								IN
//				int64_t				mask								IN
//
//				void				returns
//
//	This function allows to enable or disable several active consistency checks. Enabling the checks can 
//	introduce performance effects; it is helpfull for and meant for debugging on client side.
//	If model is zero the consistency checks are set for all open and to be created models.
//
void		DECL STDC	SetInternalCheck(
									int64_t				model,
									int64_t				setting,
									int64_t				mask
								);


//
//		GetInternalCheck                            (http://rdf.bg/gkdoc/CP64/GetInternalCheck.html)
//				int64_t				model								IN
//				int64_t				mask								IN
//
//				int64_t				returns								OUT
//
//	This function returns all current enabled active consistency checks given the mask the function is 
//	called for.
//	When leaving mask and settinbg zero it will return all bits that can be set.
//
int64_t		DECL STDC	GetInternalCheck(
									int64_t				model,
									int64_t				mask
								);


//
//		GetInternalCheckIssueCnt                    (http://rdf.bg/gkdoc/CP64/GetInternalCheckIssueCnt.html)
//				int64_t				model								IN
//
//				int64_t				returns								OUT
//
//	This function returns all issues found and not retrieved by the hosting application through 
//	GetInternalCheckIssue() / GetInternalCheckIssueW().
//
int64_t		DECL STDC	GetInternalCheckIssueCnt(
									int64_t				model
								);


//
//		GetInternalCheckIssue                       (http://rdf.bg/gkdoc/CP64/GetInternalCheckIssue.html)
//				int64_t				model								IN
//				char				** name								IN / OUT
//				char				** description						IN / OUT
//				int64_t				* relatedOwlInstance				IN / OUT
//
//				void				returns
//
//	This function returns the oldest issues in the list of issues and reduces the list of issues with 1.
//	The name and description represent the issue as ASCII string, if relevant the relating owlInstance
//	will be returned through relatedOwlInstance.
//	Namer, Description and relatedOwlInstance are optional.
//
void		DECL STDC	GetInternalCheckIssue(
									int64_t				model,
									char				** name,
									char				** description,
									int64_t				* relatedOwlInstance
								);


//
//		GetInternalCheckIssueW                      (http://rdf.bg/gkdoc/CP64/GetInternalCheckIssueW.html)
//				int64_t				model								IN
//				wchar_t				** name								IN / OUT
//				wchar_t				** description						IN / OUT
//				int64_t				* relatedOwlInstance				IN / OUT
//
//				void				returns
//
//	This function returns the oldest issues in the list of issues and reduces the list of issues with 1.
//	The name and description represent the issue as Unicode string, if relevant the relating owlInstance
//	will be returned through relatedOwlInstance.
//	Namer, Description and relatedOwlInstance are optional.
//
void		DECL STDC	GetInternalCheckIssueW(
									int64_t				model,
									wchar_t				** name,
									wchar_t				** description,
									int64_t				* relatedOwlInstance
								);


//
//		CloseSession                                (http://rdf.bg/gkdoc/CP64/CloseSession.html)
//				int64_t				returns								OUT
//
//	This function closes the session, after this call the geometry kernel cannot be used anymore.
//
int64_t		DECL STDC	CloseSession(
								);


//
//		CleanMemory                                 (http://rdf.bg/gkdoc/CP64/CleanMemory.html)
//				void				returns
//
//		This function ..
//
void		DECL STDC	CleanMemory(
								);


//
//		ClearCache                                  (http://rdf.bg/gkdoc/CP64/ClearCache.html)
//				int64_t				model								IN
//
//				void				returns
//
//		This function ..
//
void		DECL STDC	ClearCache(
									int64_t				model
								);


//
//  File IO / Stream / Copy API Calls
//

//
//		CreateModel                                 (http://rdf.bg/gkdoc/CP64/CreateModel.html)
//				int64_t				returns								OUT
//
//	This function creates and empty model.
//	References inside to other ontologies will be included.
//	A handle to the model will be returned, or 0 in case something went wrong.
//
int64_t		DECL STDC	CreateModel(
								);